--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,14 +12,17 @@ body, html {
     color: #333;
 }
 
+/* Navigation Styles */
 nav {
     background-color: #f8c8d8;
+    position: sticky;
     top: 0;
     width: 100%;
     padding: 10px 0;
     display: flex;
     justify-content: flex-end;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    z-index: 1000;
 }
 
 .sticky-nav ul {
@@ -102,6 +105,99 @@ nav {
     background-color: #bf7c84;
 }
 
+.skills {
+    background-color: #f2e4e9;
+    padding: 50px 20px;
+}
+
+.skills h2 {
+    font-size: 2em;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.skills p {
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.skills-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    width: 100%;
+    padding-bottom: 50px;
+}
+
+.card {
+    perspective: 1000px; 
+    height: 350px;
+}
+
+.card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.card:hover .card-inner {
+    transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 20px;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-back {
+    transform: rotateY(180deg);
+    overflow-y: auto;
+    max-height: 100%;
+}
+
+.card-back ul {
+    list-style-type: none;
+    padding: 20px 10px; 
+    margin: 0;
+}
+
+.card-back ul li {
+    margin-bottom: 5px;
+    list-style-type: none;
+    font-size: 1em;
+}
+
+.card-front h3 {
+    margin: 0;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.skills-content h3 {
+    margin-bottom: 10px;
+}
+
+.skills-content ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.skills-content ul li {
+    margin-bottom: 5px;
+    list-style-type: none;
+}
+
 /* About Section */
 .about {
     background-color: #e9d8df;
@@ -132,52 +228,6 @@ nav {
 }
 
 .about .cta:hover {
-    background-color: #bf7c84;
-}
-
-/* Pain Points Section */
-.pain-points {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    background-color: #f2e4e9;
-    padding: 50px 20px;
-    gap: 20px;
-}
-
-.pain-points img {
-    width: 45%;
-    max-width: 500px;
-    border-radius: 10px;
-}
-
-.pain-points div {
-    width: 45%;
-    max-width: 500px;
-}
-
-.pain-points h2 {
-    font-size: 2em;
-    margin-bottom: 15px;
-}
-
-.pain-points p {
-    font-size: 1em;
-    margin-bottom: 20px;
-}
-
-.pain-points .cta {
-    background-color: #d48b94;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 25px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.pain-points .cta:hover {
     background-color: #bf7c84;
 }
 
