--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box; 
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -8,12 +8,12 @@ body, html {
     width: 100%;
     overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #F6F0DF;
     color: #333;
 }
 
 nav {
-    background-color: #f8c8d8;
+    background-color: #344966; 
     top: 0;
     width: 100%;
     padding: 10px 0;
@@ -37,18 +37,19 @@ nav {
     text-decoration: none;
     padding: 10px 15px;
     border-radius: 5px;
-    background-color: white;
+    background-color: #f2f2f2;
     color: #333;
     transition: background-color 0.3s;
 }
 
 .sticky-nav ul li a:hover {
-    background-color: #f0b0c0;
+    background-color: #5995ED; 
+    color: #f2f2f2;
 }
 
 /* Hero Section */
 .hero {
-    background-color: #f2e4e9;
+    background-color: #F6F0DF;
     padding: 50px 10px;
     text-align: center;
     display: flex;
@@ -87,7 +88,7 @@ nav {
 }
 
 .hero .cta {
-    background-color: #d48b94;
+    background-color: #5995ED;
     color: white;
     border: none;
     border-radius: 20px;
@@ -97,11 +98,11 @@ nav {
 }
 
 .hero .cta:hover {
-    background-color: #bf7c84;
+    background-color: #BF7C84; 
 }
 
 .skills {
-    background-color: #f2e4e9;
+    background-color: #F6F0DF; 
     padding: 50px 20px;
 }
 
@@ -110,9 +111,15 @@ nav {
     margin-bottom: 10px;
     text-align: center;
 }
+
 .skills p {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     text-align: center;
+    font-size:large;
+}
+
+.skills h3 {
+    color: #f2f2f2;
 }
 
 .skills-grid {
@@ -149,7 +156,7 @@ nav {
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     padding: 20px;
-    background-color: #fff;
+    background-color: #344966;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -171,6 +178,7 @@ nav {
     margin-bottom: 5px;
     list-style-type: none;
     font-size: 1em;
+    color: #f2f2f2;
 }
 
 .card-front h3 {
@@ -195,7 +203,7 @@ nav {
 
 /* About Section */
 .about {
-    background-color: #e9d8df;
+    background-color: #F6F0DF;
     padding: 50px 20px;
     text-align: center;
 }
@@ -206,29 +214,17 @@ nav {
 }
 
 .about p {
-    font-size: 1em;
-    max-width: 600px;
+    font-size:large;
+    max-width: 850px;
     margin: 0 auto;
     margin-bottom: 20px;
 }
 
-.about .cta {
-    background-color: #d48b94;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 25px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
 
-.about .cta:hover {
-    background-color: #bf7c84;
-}
 
 /* Projects Section */
 .projects {
-    background-color: #e9d8df;
+    background-color: #F6F0DF;
     padding: 50px 20px;
     text-align: center;
 }
@@ -240,7 +236,7 @@ nav {
 
 .projects-container {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
 }
@@ -248,7 +244,7 @@ nav {
 .project-item {
     flex: 1 1 calc(33.333% - 40px);
     max-width: 250px;
-    background-color: white;
+    background-color: #f2f2f2;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     padding: 20px;
@@ -259,7 +255,6 @@ nav {
 .project-item:hover {
     transform: translateY(-10px);
 }
-
 
 .project-item h3 {
     font-size: 1.2em;
@@ -273,7 +268,7 @@ nav {
 
 /* See More Projects Button */
 .cta, .see-more-projects {
-    background-color: #d48b94;
+    background-color: #5995ED; 
     color: white;
     border: none;
     border-radius: 20px;
@@ -285,7 +280,7 @@ nav {
 }
 
 .cta:hover, .see-more-projects:hover {
-    background-color: #bf7c84;
+    background-color: #BF7C84; 
 }
 
 .see-more-projects {
@@ -293,12 +288,57 @@ nav {
     font-size: 1em;
 }
 
+.contact{
+    background-color: #F6F0DF;
+    padding: 50px 20px;
+    text-align: center;
+    font-size: large;
+}
+
+.contact-links {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.contact-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    transition: transform 0.3s, color 0.3s;
+}
+
+.contact-link img {
+    width: 30px; 
+    height: auto;
+    margin-right: 10px;
+    transition: transform 0.3s;
+}
+
+.contact-link span {
+    font-size: 1em;
+    transition: color 0.3s;
+}
+
+.contact-link:hover {
+    transform: scale(1.1);
+    color: #5995ED;
+}
+
+.contact-link:hover img {
+    transform: scale(1.2);
+}
+
+.contact-link:hover span {
+    color: #5995ED;
+}
 
 /* Footer */
 footer {
-    background-color: #f8c8d8;
+    background-color: #F6F0DF; 
     text-align: center;
     padding: 5px;
     color: #333;
-    box-shadow: 0 -2px 4px rgba(0,0,0,0.1);
 }
