--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,8 +37,8 @@ nav {
     text-decoration: none;
     padding: 10px 15px;
     border-radius: 5px;
-    background-color: #f2f2f2;
-    color: #333;
+    color: #f2f2f2;
+    font-weight:600;
     transition: background-color 0.3s;
 }
 
@@ -62,13 +62,13 @@ nav {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    max-width: 1200px;
+    max-width:fit-content;
 }
 
 .hero-text {
     flex: 1;
     text-align: left;
-    padding-right: 20px;
+    padding-right: 70px;
 }
 
 .hero h1 {
@@ -83,8 +83,8 @@ nav {
 
 .hero img {
     width: 100%;
-    max-width: 600px;
-    border-radius: 10px;
+    max-width: 650px;
+    border-radius: 30px;
 }
 
 .hero .cta {
